fdo#79303: Revert "fdo#70861 SwToSfxPageDescAttr: fix call to ...

... SvxExtParagraphTabPage"

This reverts commit 5ce19ddcb6595c71980aecfa1e8c0827343159a4.

It is now simply wrong to claim that a SID_ATTR_PARA_PAGENUM item with
value 0 is set, when that is a valid offset value.

SwTxtShell::Execute() will call SfxToSwPageDescAttr() which pulls the
SID_ATTR_PARA_PAGENUM out of the item set and sets it.

Change-Id: If5a155c2874486b3ef7d01883fe73f8e5fca46fe
(cherry picked from commit a69ef2d84c3562da5e3bfda34e643c5044b4584a)